.provarCaches/00D410000011HE0EAM/objects/rstk__Merge_Customers_Info__c.object
<CustomObject>
    <fields>
        <fullName>rstk__New_Id__c</fullName>
        <label>New Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Old_Id__c</fullName>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Source_Customer__c</fullName>
        <label>Source Customer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Target_Customer__c</fullName>
        <label>Target Customer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Merge Customers Info</label>
    <nameField>
        <label>Merge Customers Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Customers Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>